kubernetes/webserver-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-nodeport
  labels:
    run: web-service-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache
