kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usersapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: www.usersapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service-nodeport
                port:
                  number: 80
